--- a/src/app/countries/pages/selector-page/selector-page.component.html
+++ b/src/app/countries/pages/selector-page/selector-page.component.html
@@ -14,6 +14,17 @@
     </div>
   </div>
 
+  <!--Country-->
+  <div class="row mb-3">
+    <div class="col">
+      <label class="form-label">Country:</label>
+      <select formControlName="country" class="form-control">
+        <option value="">-- Select Country --</option>
+<!--        <option *ngFor="let region of regions" [value]="region">{{region}}</option>-->
+      </select>
+    </div>
+  </div>
+
 </form>
 
 <h3>Form</h3>
