--- a/src/app/countries/pages/selector-page/selector-page.component.html
+++ b/src/app/countries/pages/selector-page/selector-page.component.html
@@ -20,7 +20,7 @@
       <label class="form-label">Country:</label>
       <select formControlName="country" class="form-control">
         <option value="">-- Select Country --</option>
-<!--        <option *ngFor="let region of regions" [value]="region">{{region}}</option>-->
+        <option *ngFor="let country of countriesByRegion" [value]="country.cca3">{{country.name}}</option>
       </select>
     </div>
   </div>
