--- a/src/app/countries/pages/selector-page/selector-page.component.html
+++ b/src/app/countries/pages/selector-page/selector-page.component.html
@@ -25,6 +25,17 @@
     </div>
   </div>
 
+  <!--Border-->
+  <div class="row mb-3" *ngIf="borders.length">
+    <div class="col">
+      <label class="form-label">Border:</label>
+      <select formControlName="border" class="form-control">
+        <option value="">-- Select Border --</option>
+        <option *ngFor="let border of borders" [value]="border">{{border}}</option>
+      </select>
+    </div>
+  </div>
+
 </form>
 
 <h3>Form</h3>
