--- a/src/app/countries/pages/selector-page/selector-page.component.html
+++ b/src/app/countries/pages/selector-page/selector-page.component.html
@@ -31,9 +31,13 @@
       <label class="form-label">Border:</label>
       <select formControlName="border" class="form-control">
         <option value="">-- Select Border --</option>
-        <option *ngFor="let border of borders" [value]="border">{{border}}</option>
+        <option *ngFor="let border of borders" [value]="border.cca3">{{border.name}}</option>
       </select>
     </div>
+  </div>
+
+  <div class="row mb-3" *ngIf="!borders.length && this.myForm.get('country')?.value">
+    No Border
   </div>
 
 </form>
